--- a/ProcessingSplashSample/ProcessingSplash.xaml
+++ b/ProcessingSplashSample/ProcessingSplash.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="ProcessingSplash"
     Width="300"
-    Height="110"
+    Height="130"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     WindowStyle="SingleBorderWindow"
@@ -29,5 +29,6 @@
             Grid.Row="1"
             HorizontalAlignment="Center"
             Content="{Binding}" />
+        <Button Click="ButtonCancelOnClick" Content="キャンセル" HorizontalAlignment="Left" Margin="22,16.667,0,-5.333" Grid.Row="1" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
